...

// MARK: - Preview

#Preview {
    VStack {
        Spacer()
        CustomTabBar()
            .environmentObject(AppState())
            .environmentObject(osrsThemeManager.preview)
    }
}

